# FastAPI_Training

./: 3.py  CacheProcess.py  log.db  main.py  pyproject.toml
static/: style.css
templates/: admin.html  base.html  login.html  profile.html  register.html
