[project]
name = "login"
version = "0.1.0"
description = "Simple login/registration site with database"
authors = [
    {name = "Dmytro",email = "pytakdima@gmail.com"}
]
package-mode = false
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "cryptography (>=45.0.5,<46.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
